syntax = "proto3";
package orderpb;
option go_package = "internal/adapters/grpc/order/orderpb";

message blank{}

message Order {
    string order_id = 1;
    float price = 2;
    float tax = 3;
    float final_price = 4;
    string created_at = 5;
}

message CreateOrderRequest {
    float price = 2;
    float tax = 3;
}
message OrderList {
    repeated Order orders = 1;
}

  service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (Order) {}
    rpc ListOrders(blank) returns (OrderList) {}
}